--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmSampleLoad.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmSampleLoad.en.resx
@@ -459,6 +459,9 @@
   <data name="btnLoadReagent.Text" xml:space="preserve">
     <value>Reagent Load</value>
   </data>
+  <data name="label7.Text" xml:space="preserve">
+    <value>Dispatch：</value>
+  </data>
   <data name="fbtnRunInfoMody.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAQAAAAA6CAYAAABf5IcZAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
@@ -669,6 +672,9 @@
         /BszvVKvx5MPAzA7yGZlu5nptv2Pm/MHz+N45ZRT+BMAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnAddPatient.Location" type="System.Drawing.Point, System.Drawing">
+    <value>6, 74</value>
+  </data>
   <data name="btnAddPatient.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 40</value>
   </data>
@@ -740,7 +746,7 @@
 </value>
   </data>
   <data name="btnLoadSp.Location" type="System.Drawing.Point, System.Drawing">
-    <value>42, 24</value>
+    <value>6, 26</value>
   </data>
   <data name="btnLoadSp.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 40</value>
@@ -750,12 +756,6 @@
   </data>
   <data name="groupBox2.Location" type="System.Drawing.Point, System.Drawing">
     <value>447, 411</value>
-  </data>
-  <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>447, 42</value>
-  </data>
-  <data name="groupBox1.Text" xml:space="preserve">
-    <value>Sample Information</value>
   </data>
   <data name="Position.HeaderText" xml:space="preserve">
     <value>Position</value>
@@ -778,14 +778,11 @@
   <data name="dataGridViewTextBoxColumn2.HeaderText" xml:space="preserve">
     <value>Emergency</value>
   </data>
-  <data name="groupBox3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>2, 421</value>
+  <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>447, 42</value>
   </data>
-  <data name="groupBox3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>112, 125</value>
-  </data>
-  <data name="groupBox3.Text" xml:space="preserve">
-    <value>Reagent Legend</value>
+  <data name="groupBox1.Text" xml:space="preserve">
+    <value>Sample Information</value>
   </data>
   <data name="label17.Size" type="System.Drawing.Size, System.Drawing">
     <value>47, 12</value>
@@ -817,14 +814,14 @@
   <data name="label2.Text" xml:space="preserve">
     <value>Unloaded</value>
   </data>
-  <data name="groupBox4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>321, 442</value>
+  <data name="groupBox3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>2, 421</value>
   </data>
-  <data name="groupBox4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>114, 104</value>
+  <data name="groupBox3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>112, 125</value>
   </data>
-  <data name="groupBox4.Text" xml:space="preserve">
-    <value>Sample Legend</value>
+  <data name="groupBox3.Text" xml:space="preserve">
+    <value>Reagent Legend</value>
   </data>
   <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
     <value>29, 75</value>
@@ -853,8 +850,26 @@
   <data name="label9.Text" xml:space="preserve">
     <value>Unloaded</value>
   </data>
+  <data name="groupBox4.Location" type="System.Drawing.Point, System.Drawing">
+    <value>321, 442</value>
+  </data>
+  <data name="groupBox4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>114, 104</value>
+  </data>
+  <data name="groupBox4.Text" xml:space="preserve">
+    <value>Sample Legend</value>
+  </data>
   <data name="srdReagent.Location" type="System.Drawing.Point, System.Drawing">
     <value>-8, 13</value>
+  </data>
+  <data name="DispathchTypeAdd" xml:space="preserve">
+    <value>Sample addition</value>
+  </data>
+  <data name="DispathchTypeSampleProject" xml:space="preserve">
+    <value>Same project</value>
+  </data>
+  <data name="DispathchTypeSpeed" xml:space="preserve">
+    <value>Speed first</value>
   </data>
   <data name="keywordText.CalibrationSolution" xml:space="preserve">
     <value>Calibration Solution</value>
