提交选中质控规则提醒

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/ScalingQC/frmQC.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/ScalingQC/frmQC.en.resx
@@ -1219,4 +1219,7 @@
   <data name="reminder" xml:space="preserve">
     <value>Tips</value>
   </data>
+  <data name="keywordText.QCRules" xml:space="preserve">
+    <value>Please select quality control rule</value>
+  </data>
 </root>
