添加了几条缺少的英文字符串

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.en.resx
@@ -1319,4 +1319,19 @@
   <data name="keywordText.WashTurnOver" xml:space="preserve">
     <value>Cleaning disk rotation command receiving timeout</value>
   </data>
+  <data name="keywordText.BodyFluid" xml:space="preserve">
+    <value>Body fluid</value>
+  </data>
+  <data name="keywordText.CalibrationSolution" xml:space="preserve">
+    <value>Calibration solution</value>
+  </data>
+  <data name="keywordText.Serum" xml:space="preserve">
+    <value>Serum</value>
+  </data>
+  <data name="keywordText.SerumSampleCannotTestWithOther" xml:space="preserve">
+    <value>General samples can't be tested at the same time with standard and quality control materials!</value>
+  </data>
+  <data name="keywordText.Urine" xml:space="preserve">
+    <value>Urine</value>
+  </data>
 </root>
