--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddSample.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddSample.en.resx
@@ -1811,4 +1811,16 @@
   <data name="keywordText.StoploadStandard" xml:space="preserve">
     <value>There are non-standard or non-quality control samples in the loaded samples. The loading of samples failed this time</value>
   </data>
+  <data name="ExitSample" xml:space="preserve">
+    <value>exit sample</value>
+  </data>
+  <data name="Location" xml:space="preserve">
+    <value>Location</value>
+  </data>
+  <data name="Testcomplete" xml:space="preserve">
+    <value>completed</value>
+  </data>
+  <data name="TestStatusAbondoned" xml:space="preserve">
+    <value>abandonment</value>
+  </data>
 </root>
