修改稀释流程为稀释留底60，先加样本后加稀释液 添加没有主曲线的时候两点校准功能 修改主界面暂存盘卡管功能 修改选择质控规则显示问题

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.resx
@@ -2046,10 +2046,10 @@
     <value>血清</value>
   </data>
   <data name="keywordText.SerumSampleCannotTestWithOther" xml:space="preserve">
-    <value>一般样品不能与标准品、质控品等同时进行实验!</value>
+    <value>一般样品不能与标准品同时进行实验!</value>
   </data>
   <data name="keywordText.SerumSampleCannotTestWithOther1" xml:space="preserve">
-    <value>一般样品不能与标准品、质控品等同时进行实验!</value>
+    <value>一般样品不能与标准品等同时进行实验!</value>
   </data>
   <data name="keywordText.Standard" xml:space="preserve">
     <value>标准品</value>
