修改历史数据重新计算报错的问题 修改质控操作中发现的问题 修改样本装载过程中试剂和稀释液剩余量的判断 修改实验运行信息中稀释液可使用量的判断 修改同时装载同一项目不同批次试剂只做一个试剂定标时报缺少另一个试剂定标

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/ScalingQC/frmQC.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/ScalingQC/frmQC.en.resx
@@ -1222,4 +1222,7 @@
   <data name="keywordText.QCRules" xml:space="preserve">
     <value>Please select quality control rule</value>
   </data>
+  <data name="keywordText.null" xml:space="preserve">
+    <value>The value is empty, this operation failed</value>
+  </data>
 </root>
