添加导入数据提示信息

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/DataQuery/frmResultQuery.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/DataQuery/frmResultQuery.en.resx
@@ -1568,4 +1568,7 @@
   <data name="Tips" xml:space="preserve">
     <value>Tips</value>
   </data>
+  <data name="keywordText.SelectSampleMessage" xml:space="preserve">
+    <value>Please select the sample information that needs to import data!</value>
+  </data>
 </root>
