定标多个项目过期同时提醒

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.en.resx
@@ -1224,7 +1224,7 @@
     <value>Sampling probe</value>
   </data>
   <data name="keywordText.SclingOver" xml:space="preserve">
-    <value>Reagent calibration information has expired, please replace or recalibrate!</value>
+    <value>The above reagent calibration information has expired. Do you want to continue the experiment?</value>
   </data>
   <data name="keywordText.Scnn" xml:space="preserve">
     <value>Upper and lower computer connection</value>
